--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,6 +4,9 @@ title {
 h1 {
     text-align: center;
 }
+h4 {
+    text-align: center;
+}
 body, html {
     margin: 0;
     font-family: sans-serif;
