--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,9 @@
 <h1>
     TaskMaster
 </h1>
+{% if tasks|length <1 %}
+<h4>There are currently no tasks. Create One !!</h4>
+{% else %}
 <table>
     <tr>
         <th>Task</th>
@@ -29,6 +32,7 @@
         </tr>
     {% endfor %}
 </table>
+{% endif %}
 <form action="/" method = "POST">
     <input type="text" name="content" id="content">
     <input type="submit" value="Add Task">
