--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,7 +10,7 @@ h4 {
 body, html {
     margin: 0;
     font-family: sans-serif;
-    background-color: lightyellow;
+    background-color: lightblue;
 }
 
 .content {
